sventon change history
-----------------------------------------------------------------------------------------

[1605] Release 2.1.3 (2009-06-16)
[1597] Fixed: Bug #15842 - High memory consumption when populating cache.

[1588] Release 2.1.2 (2009-06-07)
[1582] Added: Upgraded to SVNKit 1.3.0 (5903).
       Fixed: Bug #15779 - SVNKit serialization problem.
[1573] Bug #10132 - Cache does not survive SIGKILL (reopened).

[1571] Release 2.1.1 (2009-05-26)
[1561] Added: Upgraded to SVNKit 1.3.0.
[1560] Fixed: Bug #15603 - Boolean queries not possible in log search.

[1556] Release 2.1.0 (2009-04-19)
[1549] Added: Feature #4572 - Allow searching for author in log search.
[1540] Added: Feature #4551 - User based access control with caching.
[1533] Added: Feature #4522 - Case-insensitive entry search.
[1531] Added: Feature #4564 - New entry cache implementation.
[1525] Added: Feature #4565 - New log cache implementation.

[1517] Release 2.0.5 (2009-03-04)
[1514] Fixed: Bug #15311 - Does not work on WebSphere 6.1.

[1510] Release 2.0.4 (2009-02-22)
[1505] Fixed: Bug #15304 - Show latest revision info broken.

[1500] Release 2.0.3 (2009-02-18)
[1497] Fixed: Bug #15086 - User based auth broken (since 2.0.0).
[1496] Added: Feature #4116 - Possibility to search entries by author.

[1488] Release 2.0.2 (2009-02-10)
[1482] Fixed: Bug #15238 - EntryCache population bug.
[1476] Fixed: Bug #15182 - Append trailing slash to URL.
[1475] Fixed: Bug #15155 - Cache not flushed after updating 'lastUpdatedRevision'.

[1467] Release 2.0.1 (2009-01-25)
[1462] Added: Feature #4453 - Add link to admin page if enabled.
[1460] Fixed: Bug #15086 - User based auth broken.

[1456] Release 2.0.0 (2009-01-19)
[1443] Added: Upgraded to SVNKit 1.2.2.
[1425] Added: Feature #4407 - Add options to Log View.
[1421] Added: Upgraded to Spring 2.5.6.
[1418] Added: Feature #2747 - Asynchronous exports.
[1412] Fixed: Bug #5604 - Not possible to diff over paged logs.